docs fix
