# docs/swagger.json
@@ -61,6 +61,37 @@
                 "responses": {}
             }
         },
+        "/auth/verify": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Verification endpoint",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userid",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "otp",
+                        "name": "otp",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/events": {
             "get": {
                 "consumes": [
@@ -767,7 +798,7 @@
                 }
             }
         },
-        "/posts/org/delete/:id": {
+        "/posts/post/:id/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -1157,7 +1188,7 @@
                 "content": {
                     "type": "string"
                 },
-                "postId": {
+                "postID": {
                     "type": "string"
                 }
             }
